Improve API docs
