# app/controllers/api/v1/comments_controller.rb
@@ -23,8 +23,7 @@ module Api
         if request.headers['X-AUTH-TOKEN']
           @user = User.find_by_api_token(request.headers['X-AUTH-TOKEN'])
           if @user
-            new_comment = @user.comments.new(text: params[:text])
-            new_comment.post_id = params[:post_id].to_i
+            new_comment = @user.comments.new(text: params[:text], post_id: params[:post_id])
             if new_comment.save
               render json: { success: true, message: 'Comment created', data: { comment: new_comment } },
                      status: :created
